; ModuleID = '/home/carl/AnghaBench/micropython/ports/pic16bit/extr_board.c_led_state.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/pic16bit/extr_board.c_led_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LED_ON = common dso_local global i32 0, align 4
@LED_OFF = common dso_local global i32 0, align 4
@RED_LED = common dso_local global i32 0, align 4
@YELLOW_LED = common dso_local global i32 0, align 4
@GREEN_LED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_state(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32, i32* @LED_ON, align 4
  br label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @LED_OFF, align 4
  br label %12

12:                                               ; preds = %10, %8
  %13 = phi i32 [ %9, %8 ], [ %11, %10 ]
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %3, align 4
  switch i32 %14, label %21 [
    i32 1, label %15
    i32 2, label %17
    i32 3, label %19
  ]

15:                                               ; preds = %12
  %16 = load i32, i32* %5, align 4
  store i32 %16, i32* @RED_LED, align 4
  br label %21

17:                                               ; preds = %12
  %18 = load i32, i32* %5, align 4
  store i32 %18, i32* @YELLOW_LED, align 4
  br label %21

19:                                               ; preds = %12
  %20 = load i32, i32* %5, align 4
  store i32 %20, i32* @GREEN_LED, align 4
  br label %21

21:                                               ; preds = %12, %19, %17, %15
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
